postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
spec:
  replicas: 1  # Adjust as per your requirements
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres-db
          image: postgres:latest  # Adjust image version as per your PostgreSQL requirement
          resources:
            limits:
              cpu: 1
              memory: 1024
