django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 80  # Adjust port as per your Django app configuration
      targetPort: 8000  # Adjust port as per your Django app configuration
  type: ClusterIP
